# Bioinformatic_toolbox

./: README.md  SA.py  documentation.ipynb  documentation.md  output  pdb.py  pyproject.toml
code/: SA.py  fasta.py  hamming.py  pdb.py
data/: p53_clustal  seq1  seq2  sequence
