[tool.poetry]
authors = ["Lucie Drahonovska <luckadrahonovska@seznam.cz>"]
description = ""
license = "MIT"
name = "bioinformatic_toolbox"
version = "0.1.0"

[tool.poetry.dependencies]
biopython = "^1.79"
python = ">=3.9,<3.10"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
